Fix path for css and js files in index.html$

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <link rel="stylesheet" href="dist/css/main.css">
-        <script data-main="dist/js/build" src="dist/js/vendor/require.js"></script>
+        <link rel="stylesheet" href="build/styles/main.css">
+        <script data-main="build/scripts/build" src="build/scripts/vendor/require.js"></script>
     </body>
 </html>
