--- a/index.html
+++ b/index.html
@@ -31,32 +31,11 @@
             <div class="container">
                 <!-- Header -->
                 <header class="mainHeader">
-                    <h1 class="tl1 center">Welcome to Bijoo Start !</h1>
-
-                    <!-- Main menu -->
-                    <nav role="navigation">
-                        <ul class="mainMenu">
-                            <li>
-                                <a href="#">Item 1</a>
-                            </li>
-                            <li>
-                                <a href="#">Item 2</a>
-                            </li>
-                            <li>
-                                <a href="#">Item 3</a>
-                            </li>
-                            <li>
-                                <a href="#">Item 4</a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <h1>Welcome to Bijoo Start !</h1>
                 </header>
 
                 <!-- Page content -->
                 <main class="mainContent">
-                    <h2 class="tl1">Niveau de titre 1</h2>
-                    <h2 class="tl2">Niveau de titre 2</h2>
-                    <h2 class="tl3">Niveau de titre 3</h2>
                 </main>
 
                 <!-- Footer -->
