--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
         </div>
 
         <link rel="stylesheet" href="build/styles/main.css">
-        <script data-main="build/scripts/build" src="build/scripts/vendor/require.js"></script>
+        <script data-main="build/scripts/main" src="build/scripts/vendor/require.js"></script>
     </body>
 </html>
