--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
 
                 <!-- Page content -->
                 <main class="mainContent">
+                    <div class="player" id="player_1">
+                        <h1>player 1</h1>
+                        <button class="button_1">Button</button>
+                        <button class="button_2">Button</button>
+                        <button class="button_3">Button</button>
+                        <button class="button_4">Button</button>
+                        <button class="button_5">Button</button>
+                    </div>
+                    <div class="player" id="player_2">
+                        <h1>player 2</h1>
+                        <button class="button_1">button</button>
+                        <button class="button_2">button</button>
+                        <button class="button_3">button</button>
+                        <button class="button_4">button</button>
+                        <button class="button_5">button</button>
+                    </div>
                 </main>
 
                 <!-- Footer -->
@@ -45,6 +61,9 @@
         </div>
 
         <link rel="stylesheet" href="build/styles/main.css">
-        <script src="build/scripts/main.js"></script>
+
+        <script src="node_modules/systemjs/dist/system.src.js"></script>
+        <script src="build/scripts/build.js"></script>
+
     </body>
 </html>
