--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
 
         <link rel="stylesheet" href="build/styles/main.css">
 
-        <script src="node_modules/systemjs/dist/system.src.js"></script>
-        <script src="build/scripts/build.js"></script>
+        <script src="build/scripts/main.js"></script>
 
     </body>
 </html>
