--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 
         <link rel="stylesheet" href="build/styles/main.css">
 
+        <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+
         <script src="build/scripts/main.js"></script>
 
     </body>
