--- a/index.html
+++ b/index.html
@@ -66,5 +66,8 @@
 
         <script src="build/scripts/main.js"></script>
 
+        <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=2"></' + 'script>')</script>
+
+
     </body>
 </html>
