Add Karma test ok

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
                 <!-- Page content -->
                 <main class="mainContent">
+                    <div id="turn">0</div>
                     <div class="player" id="player_1">
                         <h1>player 1</h1>
                         <button class="button_1">Button</button>
