fix path for favicon & remove eslint desable from main.js

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="dist/images/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" href="dist/images/favicon.png" />
+        <link rel="apple-touch-icon" href="build/images/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" href="build/images/favicon.png" />
 
         <link rel="stylesheet" href="build/styles/main.css">
 
