--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <meta name="keywords" content="">
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="apple-touch-icon" href="build/images/apple-touch-icon.png" />
         <link rel="icon" type="image/png" href="build/images/favicon.png" />
