fix - cleaning html

--- a/index.html
+++ b/index.html
@@ -26,23 +26,10 @@
 
                 <!-- Page content -->
                 <main class="mainContent">
-                    <div id="turn">0</div>
-                    <div class="player" id="player_1">
-                        <h1>player 1</h1>
-                        <button class="button_1">Button</button>
-                        <button class="button_2">Button</button>
-                        <button class="button_3">Button</button>
-                        <button class="button_4">Button</button>
-                        <button class="button_5">Button</button>
-                    </div>
-                    <div class="player" id="player_2">
-                        <h1>player 2</h1>
-                        <button class="button_1">button</button>
-                        <button class="button_2">button</button>
-                        <button class="button_3">button</button>
-                        <button class="button_4">button</button>
-                        <button class="button_5">button</button>
-                    </div>
+
+                    <div id="turn">Text to be updated by click on button</div>
+                    <button class="button_1">Button</button>
+
                 </main>
 
                 <!-- Footer -->
